[Various] Reduce bg size on mobile, fix back links

--- a/css/slots_mobile.css
+++ b/css/slots_mobile.css
@@ -1,3 +1,6 @@
+body {
+    background: #0a2747;
+}
 #modal {
     padding-top: 10%;
 }
